aws/RouteTables-eu-central-1.json
{
 "RouteTables": [
  {
   "Associations": [
    {
     "Main": true, 
     "RouteTableAssociationId": "rtbassoc-5d69f134", 
     "RouteTableId": "rtb-9d7fedf4"
    }
   ], 
   "PropagatingVgws": [], 
   "RouteTableId": "rtb-9d7fedf4", 
   "Routes": [
    {
     "DestinationCidrBlock": "172.31.0.0/16", 
     "GatewayId": "local", 
     "Origin": "CreateRouteTable", 
     "State": "active"
    }, 
    {
     "DestinationCidrBlock": "0.0.0.0/0", 
     "GatewayId": "igw-9600a6ff", 
     "Origin": "CreateRoute", 
     "State": "active"
    }
   ], 
   "Tags": [], 
   "VpcId": "vpc-3509825c"
  }
 ]
}
